--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,7 @@ services:
   ollama:
     image: ollama/ollama:latest
     ports:
-      - 7869:11434
+      - 14994:11434
     volumes:
       - .:/code
       - ./ollama/ollama:/root/.ollama
@@ -40,14 +40,18 @@ services:
     depends_on:
       - ollama
     ports:
-      - 8080:8080
+      - 4992:8080
     environment: # https://docs.openwebui.com/getting-started/env-configuration#default_models
-      - OLLAMA_BASE_URLS=http://host.docker.internal:7869 #comma separated ollama hosts
+      - OLLAMA_BASE_URLS=http://host.docker.internal:14994 #comma separated ollama hosts
       - ENV=dev
-      - WEBUI_AUTH=False
-      - WEBUI_NAME=valiantlynx AI
-      - WEBUI_URL=http://localhost:8080
-      - WEBUI_SECRET_KEY=t0p-s3cr3t
+      - WEBUI_AUTH=True
+      - WEBUI_NAME=TMD AI
+      - WEBUI_URL=http://${WEBUI_ADDRESS}:4992
+      - WEBUI_SECRET_KEY=${WEBUI_SECRET_KEY}
+      - ENABLE_OLLAMA_API=true
+      - IMAGE_GENERATION_ENGINE=openai
+      - IMAGES_OPENAI_API_KEY=${DALL_E_API_KEY)
+      - IMAGES_OPENAI_API_BASE_URL=${DALL_E_API_BASE_URL}
     extra_hosts:
       - host.docker.internal:host-gateway
     restart: unless-stopped
