--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,7 @@
-version: '3.8'
+version: '3.9'
+
 services:
+
   app:
     build: .
     ports:
@@ -18,7 +20,7 @@ services:
   ollama:
     image: ollama/ollama:latest
     ports:
-      - 11434:11434
+      - 14994:11434
     volumes:
       - .:/code
       - ./ollama/ollama:/root/.ollama
@@ -26,6 +28,9 @@ services:
     pull_policy: always
     tty: true
     restart: always
+    environment:
+      - OLLAMA_KEEP_ALIVE=24h
+      - OLLAMA_HOST=0.0.0.0
     networks:
       - ollama-docker
 
@@ -37,9 +42,18 @@ services:
     depends_on:
       - ollama
     ports:
-      - 8080:8080
-    environment:
-      - '/ollama/api=http://ollama:11434/api'
+      - 4992:8080
+    environment: # https://docs.openwebui.com/getting-started/env-configuration#default_models
+      - OLLAMA_BASE_URLS=http://host.docker.internal:14994 #comma separated ollama hosts
+      - ENV=dev
+      - WEBUI_AUTH=True
+      - WEBUI_NAME=TMD AI
+      - WEBUI_URL=http://${WEBUI_ADDRESS}:4992
+      - WEBUI_SECRET_KEY=${WEBUI_SECRET_KEY}
+      - ENABLE_OLLAMA_API=true
+      - IMAGE_GENERATION_ENGINE=openai
+      - IMAGES_OPENAI_API_KEY=${DALL_E_API_KEY)
+      - IMAGES_OPENAI_API_BASE_URL=${DALL_E_API_BASE_URL}
     extra_hosts:
       - host.docker.internal:host-gateway
     restart: unless-stopped
@@ -49,4 +63,3 @@ services:
 networks:
   ollama-docker:
     external: false
-  
